Fixed a rounded border issue that occured because we changed the table layout in the barrier page.
Added a distance check to the touch events to better distinguish a tap from a scroll movement.

Removed the no-break hyphen symbol from the json file as it required too much work to use directly.

--- a/eal_stp/components/MDL/ConditionComponents.css
+++ b/eal_stp/components/MDL/ConditionComponents.css
@@ -122,6 +122,6 @@
   }
 
   .logicCell{
-    width: 20%;
+    width: 60px;
   }
 }
